# Copyright (c) 2004-2020 Adam Karpierz
# Licensed under proprietary License
# Please refer to the accompanying LICENSE file.

[metadata]
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst; charset=UTF-8
project_urls =
    Documentation=https://jni.readthedocs.io/
    Source=https://github.com/karpierz/jni/
license_files = LICENSE
keywords = jni, jtypes, jt, jpype, jep, pyjnius, jpy, javabridge, pyjava,
           jcc, py4j, jython, java, pythonjava, rubicon-java
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: Free for non-commercial use
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Natural Language :: Polish
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: Stackless
    Programming Language :: Java
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Java Libraries

[options]
python_requires = >=3.6.0
setup_requires =
    setuptools>=42.0.2
install_requires =
    setuptools>=42.0.2
    atpublic>=1.0.0
    py-cpuinfo>=5.0.0
packages = find:
package_dir =
    = src
    # jni.tests = tests
zip_safe = True

[options.packages.find]
where = src

[options.package_data]
jni = jni.cfg, lic.key

[options.extras_require]
cffi =
    cffi>=1.13.2
cython =
    Cython>=0.29.14
doc =
    Sphinx>=2.2.1
    restructuredtext-lint>=1.3.0
    #rinohtype @ https://github.com/brechtm/rinohtype/archive/master.zip # stable.zip
test =

[sdist]
formats = zip

[bdist_wheel]
universal = False

[build_sphinx]
source-dir = docs
build-dir = build/docs
builder = html
all-files = True
warning-is-error = True

#
# Configuration(s) for tox
#

[tox:tox]
envlist = py{36,37,38}, pypy, pypy3, coverage, docs
minversion = 3.13.2
requires =
    tox-venv>=0.4.0
    {[base]setup_requires}
skip_missing_interpreters = true

[base]
setup_requires =
    pip>=19.3.1
    setuptools>=41.6.0
    wheel>=0.33.6
packagesubdir = jni

[testenv]
passenv = WINDIR VS100COMNTOOLS ProgramFiles ProgramFiles(x86)
commands =
    {envpython} --version
    {envpython} -B -m tests {posargs}
extras = test, cffi, cython
deps =
    {[base]setup_requires}

[testenv:prepare]
basepython = python3.7
skip_install = true
whitelist_externals =
    cmd
    .build
commands =
    cmd /C if exist .build.cmd .build

[testenv:coverage]
basepython = python3.7
commands =
    {envpython} -m coverage erase
    -{envpython} -B -m coverage run -m tests {posargs}
    {envpython} -m coverage report
    {envpython} -m coverage html
deps =
    {[testenv]deps}
    coverage>=5.0.3
    diff-cover>=2.5.2

[testenv:docs]
basepython = python3.7
commands =
   #{envpython} -m sphinx.apidoc -f {envsitepackagesdir}/{[base]packagesubdir}
    {envpython} setup.py -v build_sphinx -b html -E
   #{envpython} setup.py -v build_sphinx -b rinoh
   #{envpython} setup.py -v build_sphinx -b linkcheck
    {envpython} setup.py -v build_sphinx -b doctest
extras = doc

[testenv:lint]
basepython = python3.7
commands =
    {envpython} -m flake8 {envsitepackagesdir}/{[base]packagesubdir}/
extras =
deps =
    {[testenv]deps}
    flake8>=3.7.9
    flake8-docstrings>=1.5.0
    pep8-naming>=0.9.1
    flake8-builtins>=1.4.2

[coverage:run]
source =
    jni
    tests/python
data_file = .tox/coverage/.coverage

[coverage:report]
exclude_lines =
    # Regexes
    # Have to re-enable the standard pragma
    pragma: no cover
    raise (AssertionError|NotImplementedError)
    if\s+(0|False)\s*:
    if\s+__name__.*\s*==\s*['"]__main__['"]\s*:
    ^\s*@unittest\.skip\(
    ^\s*@unittest\.skipIf\(sys\.platform\.startswith\("win"\)
omit =
    tests/run.py
skip_covered = False

[coverage:html]
directory = .tox/coverage/.coverage.html

[flake8]
filename = *.py,*.pyx
#include = tests
#exclude = .tox,*.egg,.git,_build,.hypothesis
max-line-length = 99
ignore = E126,E203,E221,E251,E302,E701,E702,E731,
         E122,E127,E128,E222,E272,E241,E266, E226,E704,
         D100, D101, D102, D103, D104, D400,
         N806, N802, N803, N801,
         I100
# (e.g. E4,W) default: E121,E123, 126, 226,E24, 704
#select = 
#select = E,W,F,N,I
output-file = .tox/lint/flake8out.txt
count = True
#show-pep8,
#show-source
#verbose
#quiet
