# Copyright (c) 2004-2022 Adam Karpierz
# Licensed under CC BY-NC-ND 4.0
# Licensed under proprietary License
# Please refer to the accompanying LICENSE file.

[metadata]
name             = jni
version          = 1.0.0b18
description      = Python bridge for the Java Native Interface.
url              = https://pypi.org/project/jni/
download_url     = https://pypi.org/project/jni/
author           = Adam Karpierz
author_email     = adam@karpierz.net
maintainer       = Adam Karpierz
maintainer_email = adam@karpierz.net
license          = Creative Commons BY-NC-ND 4.0 License ; https://creativecommons.org/licenses/by-nc-nd/4.0 ;
                   Copyright (c) 2004-2022 Adam Karpierz, All Rights Reserved, Licensed under proprietary License
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst; charset=UTF-8
project_urls =
    Documentation=https://jni.readthedocs.io/
    Source=https://github.com/karpierz/jni
    Issues=https://github.com/karpierz/jni/issues
license_files = LICENSE
keywords = jni, jvm, jtypes, jt, jpype, jep, pyjnius, jpy, javabridge,
           pyjava, jcc, py4j, jython, java, pythonjava, rubicon-java
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: Free for non-commercial use
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Natural Language :: Polish
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: Stackless
    Programming Language :: Java
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Java Libraries

[options]
python_requires = >=3.6.0,<4.0.0
install_requires =
    # mandatory
    setuptools>=42.0.2
    importlib-resources>=5.2.2
    importlib-metadata>=4.6.4
    pkg_about>=1.0.3
    # others
packages = find:
package_dir =
    = src
    # jni.tests = tests
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
cffi =
    cffi>=1.14.6
cython =
    Cython>=0.29.24
doc =
    Sphinx>=4.2.0
    sphinx-tabs>=3.2.0
    sphinxcontrib-spelling>=7.2.1
    restructuredtext-lint>=1.3.2
test =
    deepdiff>=5.6.0

[options.package_data]
jni =
    jni.cfg

[options.entry_points]
console_scripts =

[sdist]
formats = zip

[bdist_wheel]
universal = False

[build_sphinx]
source-dir = docs
build-dir = build/docs
builder = html
all-files = True
warning-is-error = True

#
# Configuration(s) for tox
#

[tox:tox]
envlist = py{36,37,38,39}, coverage, docs
minversion = 3.24.4
isolated_build = True
skip_missing_interpreters = true
requires =
    tox-venv>=0.4.0
    tox-backticks>=0.3.0
    tox-tags>=0.2.0
    {[base]setup_requires}

[base]
setup_requires =
    pip>=21.2.4
    setuptools>=57.4.0
    wheel>=0.37.0
packagesubdir = jni

[testenv]
passenv = WINDIR VS100COMNTOOLS ProgramFiles ProgramFiles(x86)
commands =
    {envpython} --version
    {envpython} -B -m tests {posargs}
extras = test, cffi, cython
deps =
    {[base]setup_requires}

[testenv:prepare]
basepython = python3.7
skip_install = true
whitelist_externals =
    cmd
    .build
commands =
    cmd /C if exist .build.cmd .build.cmd

[testenv:coverage]
basepython = python3.7
commands =
    {envpython} -m coverage erase
    -{envpython} -B -m coverage run -m tests {posargs}
    {envpython} -m coverage report
    {envpython} -m coverage html
deps =
    {[testenv]deps}
    coverage>=6.0.2
    diff-cover>=6.4.2

[testenv:docs]
basepython = python3.7
commands =
   #{envpython} -m sphinx.apidoc -f {envsitepackagesdir}/{[base]packagesubdir}
    {envpython} setup.py -v build_sphinx -b html -E
    {envpython} setup.py -v build_sphinx -b linkcheck
    {envpython} setup.py -v build_sphinx -b doctest
extras = doc
deps =

[testenv:build]
basepython = python3.7
setenv =
    PKG_NAME=`{envpython} setup.py --fullname`
    PKG_DIST=`{envpython} -c 'print("""{env:PKG_NAME}""".strip(), end="")'`
    PKG_PVER=`{envpython} -c 'import platform ; print("".join(platform.python_version_tuple()[:2]))'`
commands =
    {[testenv]commands}
    {[testenv:docs]commands}
    {envpython} setup.py sdist
    {envpython} setup.py --quiet bdist_wheel --python-tag py{env:PKG_PVER}
    {envpython} -m pyc_wheel --quiet "dist/{env:PKG_DIST}*.whl"
    # check out for PyPi
    {envpython} -m twine check dist/*
extras =
    {[testenv]extras}
    {[testenv:docs]extras}
deps =
    {[testenv]deps}
    {[testenv:docs]deps}
    pyc-wheel>=1.2.7
    twine>=3.4.2

[testenv:publish]
basepython = python3.7
setenv =
    {[testenv:build]setenv}
commands =
    {[testenv:build]commands}
    # publish on PyPi
    {envpython} -m twine upload dist/*
extras =
    {[testenv:build]extras}
deps =
    {[testenv:build]deps}
    twine>=3.4.2

[testenv:lint]
basepython = python3.7
commands =
    {envpython} -m flake8 {envsitepackagesdir}/{[base]packagesubdir}/
extras =
deps =
    {[testenv]deps}
    flake8>=4.0.1
    flake8-docstrings>=1.6.0
    pep8-naming>=0.12.1
    flake8-builtins>=1.5.3

[coverage:run]
source =
    jni
    tests
data_file = .tox/coverage/.coverage

[coverage:report]
exclude_lines =
    # Regexes
    # Have to re-enable the standard pragma
    pragma: no cover
    raise (AssertionError|NotImplementedError)
    if\s+(0|False)\s*:
    if\s+__name__.*\s*==\s*['"]__main__['"]\s*:
    ^\s*@unittest\.skip\(
    ^\s*@unittest\.skipIf\(sys\.platform\.startswith\("win"\)
omit =
    tests/run.py
skip_covered = False

[coverage:html]
directory = .tox/coverage/.coverage.html

[flake8]
filename = *.py,*.pyx
#include = tests
#exclude = .tox,*.egg,.git,_build,.hypothesis
exclude = .tox/lint/Lib/site-packages/jni/cffi/jni.py
max-line-length = 99
ignore = E126,E203,E221,E251,E302,E701,E702,E731,
         E122,E127,E128,E222,E272,E241,E266, E226,E704,
         D100, D101, D102, D103, D104, D400, D401, D202,
         N806, N802, N803, N801,
         I100
# (e.g. E4,W) default: E121,E123, 126, 226,E24, 704
#select =
#select = E,W,F,N,I
output-file = .tox/lint/flake8out.txt
count = True
#show-pep8,
#show-source
#verbose
#quiet
